Fix spacing between heading and review date

--- a/src/scss/_reviews.scss
+++ b/src/scss/_reviews.scss
@@ -42,6 +42,7 @@ REVIEWS
 		}
 		h5 {
 			font-weight: normal;
+			padding-left: 5px;
 		}
 		p {
 			max-width: 600px;
